fixed ur picture spacing in mobile

--- a/style.css
+++ b/style.css
@@ -54,12 +54,13 @@ body {
 
 @media only screen and (max-width: 576px) {
     .landing-text h1 {
-      font-size: 47px;
+      font-size: 45px;
       padding-top: 18px;
+      margin-bottom: 0;
     }
     .landing-text h3 {
       font-size: 23px;
-      padding-top: 18px;
+      padding-top: 15px;
     }
     .home {
         background-attachment: relative;
